--- a/lang/ru.json
+++ b/lang/ru.json
@@ -23,5 +23,10 @@
     "weather-geolocation": "Чтобы появился виджет погоды, нужно разрешить использование геолокации.",
     "name-limit": "Ваше имя должно содержать хотя бы один символ отличный от пробела.",
     "background-limit": "Достигнут предел для обновлеия фона! Извините, но вы можете обновлять фон 50 раз в час.",
-    "main-focus-limit": "Ваша основная задача должна содержать хотя бы один символ отличный от пробела."
+    "main-focus-limit": "Ваша основная задача должна содержать хотя бы один символ отличный от пробела.",
+    "todo-limit": "Ваше задание должно содержать хотя бы один символ отличный от пробела.",
+    "todo": "Задачи",
+    "todo-active": "Активные",
+    "todo-completed": "Завершенные",
+    "todo-placeholder": "Добавить задачу"
 }
