--- a/lang/ru.json
+++ b/lang/ru.json
@@ -20,6 +20,7 @@
     "info": "Информация!",
     "location-no-result": "Нет результатов для определения введеного вами местоположения. Проверьте введенные данные и повторите попытку.",
     "input-limit": "Ограничение на ввод! Достигнута максимальная длина для ввода текста.",
+    "input-null": "Длина текста не может быть меньше одного символа. Пожалуйста попробуйте снова.",
     "weather-geolocation": "Чтобы появился виджет погоды, нужно разрешить использование геолокации.",
     "name-limit": "Ваше имя должно содержать хотя бы один символ отличный от пробела.",
     "background-limit": "Достигнут предел для обновлеия фона! Извините, но вы можете обновлять фон 50 раз в час.",
